taskUtil 变更为robotUtil ext添加areaid

--- a/src/style/font1.less
+++ b/src/style/font1.less
@@ -35,6 +35,17 @@
     .font7 {
         font-size: 16px !important;
     }
+
+    //任务列表内任务文字
+    .font8 {
+        font-size: 24px !important;
+    }
+
+
+    //任务状态
+    .font9 {
+        font-size: 24px !important;
+    }
 }
 
 //中号字体
@@ -74,6 +85,17 @@
     .font7 {
         font-size: 24px !important;
     }
+
+    //任务列表内任务文字
+    .font8 {
+        font-size: 30px !important;
+    }
+
+
+    //任务状态
+    .font9 {
+        font-size: 30px !important;
+    }
 }
 
 //大号字体
@@ -112,5 +134,15 @@
     //弹框内按钮
     .font7 {
         font-size: 30px !important;
+    }
+
+    //任务列表内任务文字
+    .font8 {
+        font-size: 30px !important;
+    }
+
+    //任务状态
+    .font9 {
+        font-size: 36px !important;
     }
 }
